java/java-tests/testData/inspection/migrateFromJavaLangIo/beforePartialQualifier.java
void main() {
<error descr="Cannot resolve symbol 'O'">O<caret></error>/*some*/.println(/*some2*/"Hello");
}
